<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"

  >
    <include layout="@layout/toolbar" />

    <!-- Question 1: Selecting the level -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_question"
                android:textSize="18sp" />

            <!-- RadioGroup for selecting the level -->
            <RadioGroup
                android:id="@+id/radioGroupLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButtonStandard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/standard" />

                <RadioButton
                    android:id="@+id/radioButtonPremium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/premium"  />

                <RadioButton
                    android:id="@+id/radioButtonGold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gold" />
            </RadioGroup>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


    <TextView
        android:id="@+id/textViewMaterialType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/material_type_question"
        android:textSize="16sp"
        android:layout_margin="16dp"

        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkboxVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/online_sessions"
        app:layout_constraintTop_toBottomOf="@id/textViewMaterialType"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkboxText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"
        app:layout_constraintTop_toBottomOf="@id/checkboxVideo"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkboxAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio"
        app:layout_constraintTop_toBottomOf="@id/checkboxText"
        app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout></androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

    <TextView
        android:id="@+id/textViewPreferredDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_duration"
        android:textSize="16sp"
        android:layout_margin="16dp"

        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />
    </LinearLayout></androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:id="@+id/textViewConfirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_purchase"
                android:textSize="18sp"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/radioGroupLevel"
                app:layout_constraintStart_toStartOf="parent" />

            <CheckBox
                android:id="@+id/checkboxConfirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                app:layout_constraintTop_toBottomOf="@id/textViewConfirmation"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout></androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="100dp"/>

    </LinearLayout></androidx.cardview.widget.CardView>



</LinearLayout></ScrollView><com.google.android.material.bottomnavigation.BottomNavigationView
    android:id="@+id/bottomNavigationView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="?android:attr/windowBackground"
    app:menu="@menu/bottom_navigation_menu"
    app:itemIconTint="@null"/>
</RelativeLayout>