<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back6"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center">

=    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#DFC88199">

        <!-- Home Page Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_page_title"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:padding="10dp"
            android:textStyle="bold" />


    </RelativeLayout>
    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- CardView 1 -->
        <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/Login"
            android:background="#0011331D"
            android:layout_width="180dp"
            android:layout_height="210dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:gravity="center"
                android:background="#92FF0070"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/login" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="#001327"
                    android:text="@string/login_signup"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="#424950" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="@string/login_or_signup"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="216dp"
                    android:layout_height="68dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#27A3BEF4"
                    android:text="@string/signup_page"
                    android:textColor="#FDFDFD"

                    android:textStyle="bold" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- CardView 2 -->
        <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:id="@+id/OurCourses"
            android:layout_width="180dp"
            android:layout_height="210dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:background="#92FF0070"

                android:layout_height="210dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/courses" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/our_courses"                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="#123" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="@string/go_check_courses"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="216dp"
                    android:layout_height="61dp"
                    android:backgroundTint="#25A3BEF4"
                    android:text="@string/our_courses"
                    android:textColor="#FFFFFF"

                    android:textStyle="bold" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>



    <!-- Third Row -->
    <LinearLayout
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- CardView 5 -->
        <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="340dp"
            android:id="@+id/Learnmore"
            android:layout_height="195dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:background="#92FF0070"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="84dp"
                    android:padding="10dp"
                    android:src="@drawable/masterx" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/learn_more_about"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="#456" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="@string/explore_more"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="376dp"
                    android:layout_height="43dp"
                    android:backgroundTint="#2AA3BEF4"
                    android:text="@string/learn_more"

                    android:textColor="#000000"
                    android:textStyle="bold" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>